Adding Swagger dependency
+SwaggerConfig class
+Adding @ApiOperation to @GetMapping getUser() in UserController class

--- a/MovieRental/src/main/resources/application.properties
+++ b/MovieRental/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.main.allow-bean-definition-overriding=true
 
-server.servlet.context-path=/webapp
+server.servlet.context-path=/webapp/api
 
 tokenSecret=jf9i4jgu83nfl0
