--- a/MovieRental/src/main/resources/application.properties
+++ b/MovieRental/src/main/resources/application.properties
@@ -1,11 +1,36 @@
+# ==============================================================
+# = Data Source
+# ==============================================================
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/movierental?createDatabaseIfNotExist=true
 
-spring.jpa.hibernate.ddl-auto=update
+# ==============================================================
+# = Show or not log for each sql query
+# ==============================================================
+spring.jpa.show-sql = false
+
+# ==============================================================
+# = Hibernate ddl auto (create, create-drop, update)
+# ==============================================================
+spring.jpa.hibernate.ddl-auto = update
+
+# ==============================================================
+# = The SQL dialect makes Hibernate generate better SQL for the chosen database
+# ==============================================================
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #spring.main.allow-bean-definition-overriding=true
+#logging.level.org.springframework.security=DEBUG
 
 server.servlet.context-path=/webapp/api
 
+# ==============================================================
+# = Token key
+# ==============================================================
 tokenSecret=jf9i4jgu83nfl0
+
+# ==============================================================
+# = @ApiImplicitParam
+# ==============================================================
+userController.authorizationHeader.description=JWT Token
